fixed overlap with contact and resources

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -206,7 +206,7 @@
     width: 100%;
     height: 30%;
     position: absolute;
-    top: 750%;
+    top: 775%;
     display: grid;
     justify-content: center;
 }
